--- a/app/src/main/res/layout/fragment_lose7day.xml
+++ b/app/src/main/res/layout/fragment_lose7day.xml
@@ -1,20 +1,22 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:layout_marginTop="60dp"
+    android:layout_height="match_parent">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="in.zattack.personaldietician.lose7diet1">
 
     <!-- TODO: Update blank fragment layout -->
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:scaleType="fitStart"
             android:src="@drawable/vegdiet" />
-    </ScrollView>
 </LinearLayout>
+</ScrollView>
