--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,25 +16,17 @@
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/icon_launcher" />
+        android:src="@drawable/ic_launcher" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Personal Dietitian"
+        android:text="@string/app_name"
         android:textSize="20sp"
         android:textColor="#FFF"
         android:textStyle="bold"
-        android:paddingTop="10dp"
-        android:paddingBottom="4dp"
+        android:layout_marginTop="8dp"
+        android:paddingBottom="10dp"
         android:id="@+id/username" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/email"
-        android:layout_marginBottom="8dp"
-        android:textSize="14sp"
-        android:textColor="#fff" />
 
 </LinearLayout>
