--- a/app/src/main/res/menu/menu_daily_diet.xml
+++ b/app/src/main/res/menu/menu_daily_diet.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="in.zattack.personaldietician.DietPlan">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_share"
+        android:title="@string/action_share"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_menu_share" />
 </menu>
