--- a/app/src/main/res/layout/fragment_lose7day.xml
+++ b/app/src/main/res/layout/fragment_lose7day.xml
@@ -14,8 +14,8 @@
 
 
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="1500dp"
             android:scaleType="fitStart"
             android:src="@drawable/vegdiet" />
 </LinearLayout>
