--- a/app/src/main/res/layout/fragment_lose7diet2.xml
+++ b/app/src/main/res/layout/fragment_lose7diet2.xml
@@ -14,8 +14,8 @@
 
 
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="950dp"
             android:scaleType="fitStart"
             android:src="@drawable/dietplan" />
     </LinearLayout>
