Diet (weight loss) tips activity introduced.

--- a/app/src/main/res/layout/activity_diet_tips.xml
+++ b/app/src/main/res/layout/activity_diet_tips.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="in.zattack.personaldietician.DietPlan">
+    tools:context="in.zattack.personaldietician.DietTips">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
