--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/dietPlan"
             android:icon="@drawable/ic_local_dining_black_24dp"
-            android:title="@string/diet_plan" />
+            android:title="Home" />
         <item
             android:title="Lose weight in 7 days">
             <menu>
