Calculate body fat%.

--- a/app/src/main/res/menu/menu_fat_burner.xml
+++ b/app/src/main/res/menu/menu_fat_burner.xml
@@ -1,4 +1,4 @@
 <menu xmlns:tools="http://schemas.android.com/tools"
-    tools:context="in.zattack.personaldietician.DietTips">
+    tools:context="in.zattack.personaldietician.FatBurner">
 
 </menu>
