--- a/app/src/main/res/layout/content_bmi_cal.xml
+++ b/app/src/main/res/layout/content_bmi_cal.xml
@@ -5,16 +5,18 @@
     android:id="@+id/content_bmi_cal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:background="@drawable/mybackground"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="in.zattack.personaldietician.BmiCal"
     tools:showIn="@layout/activity_bmi_cal">
-
 
     <EditText
         android:id="@+id/editText4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:textColor="#fff"
+        android:layout_marginStart="8dp"
         android:layout_alignTop="@+id/textView2"
         android:layout_toEndOf="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
@@ -25,6 +27,9 @@
         android:id="@+id/editText5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:textColor="#fff"
+        android:layout_marginStart="8dp"
         android:layout_alignTop="@+id/textView3"
         android:layout_toEndOf="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
@@ -33,13 +38,15 @@
 
     <TextView
         android:id="@+id/textView2"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="29dp"
         android:text="Height (in cm)"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="20sp" />
 
     <TextView
@@ -50,8 +57,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:text="Weight (in kg)"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="20sp" />
 
     <ImageView
@@ -66,11 +75,13 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/mybutton"
         android:layout_below="@+id/editText5"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
+        android:textColor="#fff"
         android:onClick="bmiCalculate"
         android:text="Calculate" />
 
@@ -80,6 +91,7 @@
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
+        android:textColor="#fff"
         android:textSize="20sp"
         android:id="@+id/bmi" />
 
