--- a/app/src/main/res/layout/content_fat_cal.xml
+++ b/app/src/main/res/layout/content_fat_cal.xml
@@ -5,31 +5,36 @@
     android:id="@+id/content_bmi_cal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:background="@drawable/mybackground"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="in.zattack.personaldietician.FatCal"
     tools:showIn="@layout/activity_fat_cal">
-
 
     <EditText
         android:id="@+id/editText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView2"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_toEndOf="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
         android:ems="10"
-        android:inputType="number" />
+        android:inputType="number"
+        android:textColor="#fff" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView3"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_toEndOf="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
         android:ems="10"
-        android:inputType="number" />
+        android:inputType="number"
+        android:textColor="#fff" />
 
     <TextView
         android:id="@+id/textView2"
@@ -37,9 +42,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="29dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
         android:text="Waist (in inches)"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="20sp" />
 
     <TextView
@@ -49,9 +56,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/editText1"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="Weight (in kg)"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="20sp" />
 
     <ImageView
@@ -66,11 +75,13 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:textColor="#fff"
         android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
+        android:background="@drawable/mybutton"
         android:onClick="fatCalculate"
         android:text="Calculate" />
 
@@ -81,6 +92,7 @@
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
+        android:textColor="#fff"
         android:textSize="20sp" />
 
 </RelativeLayout>
