--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,3 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu>
+
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="in.zattack.personaldietician.DietPlan">
+    <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_menu_share"
+        android:title="@string/action_share"
+        app:showAsAction="ifRoom" />
 </menu>
+
