--- a/app/src/main/res/menu/menu_daily_diet.xml
+++ b/app/src/main/res/menu/menu_daily_diet.xml
@@ -1,10 +1,2 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="in.zattack.personaldietician.DietPlan">
-    <item
-        android:id="@+id/action_share"
-        android:title="@string/action_share"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_menu_share" />
+<menu>
 </menu>
